<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/front_view"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:background="@drawable/credit_card_front"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <ImageView
        android:id="@+id/mastercard"
        android:layout_width="79dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/front_view"
        app:layout_constraintTop_toTopOf="@+id/front_view"
        app:srcCompat="@mipmap/mastercard" />

    <ImageView
        android:id="@+id/chip"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/front_view"
        app:layout_constraintEnd_toEndOf="@+id/front_view"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="@+id/front_view"
        app:layout_constraintTop_toTopOf="@+id/front_view"
        app:layout_constraintVertical_bias="0.433"
        app:srcCompat="@mipmap/chip" />

    <ImageView
        android:id="@+id/nubank"
        android:layout_width="47dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/front_view"
        app:layout_constraintEnd_toEndOf="@+id/front_view"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="@+id/front_view"
        app:layout_constraintTop_toTopOf="@+id/front_view"
        app:layout_constraintVertical_bias="0.854"
        app:srcCompat="@mipmap/nubank" />

    <EditText
        android:id="@+id/holder_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@android:color/transparent"
        android:hint="@string/holder_hint"
        android:inputType="text"
        android:textColor="#FFF"
        android:textColorLink="#FFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/front_view"
        app:layout_constraintEnd_toEndOf="@+id/front_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/nubank"
        app:layout_constraintTop_toTopOf="@+id/front_view"
        app:layout_constraintVertical_bias="0.803" />

    <View
        android:id="@+id/back_view"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:background="@drawable/credit_card_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/front_view"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/issued_by"
        android:textColor="#FFF"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@id/back_view"
        app:layout_constraintTop_toTopOf="@id/back_view" />

    <EditText
        android:id="@+id/card_number_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:background="@android:color/transparent"
        android:hint="@string/card_number_hint"
        android:inputType="number"
        android:textColor="#FFF"
        android:textColorLink="#fff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/back_view"
        app:layout_constraintEnd_toEndOf="@+id/back_view"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="@+id/back_view" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/back_view"
        app:layout_constraintEnd_toEndOf="@+id/back_view"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="@+id/back_view"
        app:layout_constraintTop_toTopOf="@+id/back_view"
        app:layout_constraintVertical_bias="0.756" />

    <EditText
        android:id="@+id/date_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:hint="@string/date_hint"
        android:inputType="number"
        android:textColor="#FFF"
        android:textColorLink="#fff"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/back_view"
        app:layout_constraintStart_toStartOf="@+id/back_view"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/cvv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cvv"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/back_view"
        app:layout_constraintEnd_toEndOf="@+id/back_view"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="@+id/back_view"
        app:layout_constraintTop_toTopOf="@+id/back_view"
        app:layout_constraintVertical_bias="0.756" />

    <EditText
        android:id="@+id/cvv_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:background="@android:color/transparent"
        android:hint="@string/cvv_hint"
        android:inputType="number"
        android:textColor="#FFF"
        android:textColorLink="#fff"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/back_view"
        app:layout_constraintTop_toBottomOf="@+id/cvv" />

    <ImageView
        android:id="@+id/cirrus"
        android:layout_width="79dp"
        android:layout_height="55dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/back_view"
        app:layout_constraintTop_toTopOf="@+id/back_view"
        app:srcCompat="@mipmap/cirrus" />

</androidx.constraintlayout.widget.ConstraintLayout>